Fixed all for "Resumen ajustes Prueba"